# tet

./: .gitignore  Cargo.toml
benches/: delaunay_tets.rs
examples/: delaunay_tets_cospherical.rs  delaunay_tets_plc.rs  delaunay_tets_random.rs  tets_plc.rs
src/: id_map.rs  lib.rs  plc.rs  tet.rs  util.rs
src/plc/: intersect.rs
src/tet/: geo.rs
