[package]
name = "tet"
version = "0.1.0"
authors = ["Joshua Ani <josh4820@gmail.com>"]
edition = "2018"

[lib]
name = "tet"
bench = false

[profile.release]
debug = true

[dependencies]
fnv = "1.0"
nalgebra = "0.24"
simplicity = "0.4.1"
float-ord = "0.2"
hilbert = "0.1.1"
bitflags = "1.2.1"
ncollide3d = "0.27.0"
stable-vec = "0.4.0"
robust-geo = "0.1.6"
obj = { version = "0.10.2", optional = true }

[dev-dependencies]
rand = "0.8"
rand_pcg = "0.3.0"
rand_distr = "0.4.0"
criterion = "0.3"
pathfinding = "2.1.1"

[[bench]]
name = "delaunay_tets"
harness = false